feat(strapi): add schema

--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-graphql": "4.1.11",
-    "@strapi/plugin-i18n": "4.1.11",
-    "@strapi/plugin-users-permissions": "4.1.11",
-    "@strapi/strapi": "4.1.11",
-    "better-sqlite3": "7.4.6",
-    "strapi-plugin-react-editorjs": "^2.0.1"
+    "@strapi/plugin-graphql": "4.3.6",
+    "@strapi/plugin-i18n": "4.3.6",
+    "@strapi/plugin-users-permissions": "4.3.6",
+    "@strapi/strapi": "4.3.6",
+    "better-sqlite3": "7.6.2"
   },
   "author": {
     "name": "A Strapi developer"
