--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-graphql": "4.3.6",
     "@strapi/plugin-i18n": "4.3.6",
     "@strapi/plugin-users-permissions": "4.3.6",
     "@strapi/strapi": "4.3.6",
-    "better-sqlite3": "7.6.2"
+    "better-sqlite3": "7.6.2",
+    "strapi-plugin-react-editorjs": "^2.0.1"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Mischa Haenen (mischahaenen@gmail.com)"
   },
   "strapi": {
     "uuid": "5b7ac261-183d-4230-b2b5-8cba6e882867"
