--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@strapi/plugin-graphql": "4.9.0",
     "@strapi/plugin-i18n": "4.9.0",
     "@strapi/plugin-users-permissions": "4.9.0",
+    "@strapi/provider-upload-aws-s3": "^4.11.5",
     "@strapi/strapi": "4.9.0",
     "better-sqlite3": "7.4.6",
     "strapi-plugin-react-editorjs": "^2.0.1"
