--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "blog",
+  "name": "Nünenen Webpage Backend",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "Official Scouting Nünenen Headless CMS Backend",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -10,13 +10,13 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-graphql": "4.9.0",
-    "@strapi/plugin-i18n": "4.9.0",
-    "@strapi/plugin-users-permissions": "4.9.0",
+    "@strapi/plugin-graphql": "4.13.3",
+    "@strapi/plugin-i18n": "4.13.3",
+    "@strapi/plugin-users-permissions": "4.13.3",
     "@strapi/provider-upload-aws-s3": "^4.11.5",
-    "@strapi/strapi": "4.9.0",
+    "@strapi/strapi": "4.13.3",
     "axios": "^1.4.0",
-    "better-sqlite3": "7.4.6",
+    "better-sqlite3": "^7.4.6",
     "pg": "^8.11.0",
     "strapi-plugin-react-editorjs": "^2.0.1"
   },
@@ -25,10 +25,6 @@
   },
   "strapi": {
     "uuid": "5b7ac261-183d-4230-b2b5-8cba6e882867"
-  },
-  "engines": {
-    "node": ">=12.x.x <=16.x.x",
-    "npm": ">=6.0.0"
   },
   "license": "MIT"
 }
