--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@strapi/plugin-graphql": "4.13.3",
     "@strapi/plugin-i18n": "4.13.3",
     "@strapi/plugin-users-permissions": "4.13.3",
+    "@strapi/provider-email-sendgrid": "^4.14.0-alpha.0",
     "@strapi/provider-upload-aws-s3": "^4.11.5",
     "@strapi/strapi": "4.13.3",
     "axios": "^1.4.0",
