--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nünenen Webpage Backend",
+  "name": "nuenenen-backend",
   "private": true,
   "version": "0.1.0",
   "description": "Official Scouting Nünenen Headless CMS Backend",
@@ -10,12 +10,12 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-graphql": "4.13.3",
-    "@strapi/plugin-i18n": "4.13.3",
-    "@strapi/plugin-users-permissions": "4.13.3",
+    "@strapi/plugin-graphql": "4.13.5",
+    "@strapi/plugin-i18n": "4.13.5",
+    "@strapi/plugin-users-permissions": "4.13.5",
     "@strapi/provider-email-sendgrid": "^4.14.0-alpha.0",
     "@strapi/provider-upload-aws-s3": "^4.11.5",
-    "@strapi/strapi": "4.13.3",
+    "@strapi/strapi": "4.13.5",
     "axios": "^1.4.0",
     "better-sqlite3": "^7.4.6",
     "pg": "^8.11.0",
