--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-graphql": "4.14.0",
-    "@strapi/plugin-i18n": "4.14.0",
-    "@strapi/plugin-users-permissions": "4.14.0",
-    "@strapi/provider-email-sendgrid": "^4.14.0-alpha.0",
-    "@strapi/provider-upload-aws-s3": "^4.11.5",
-    "@strapi/strapi": "4.14.0",
+    "@strapi/plugin-graphql": "4.15.5",
+    "@strapi/plugin-i18n": "4.15.5",
+    "@strapi/plugin-users-permissions": "4.15.5",
+    "@strapi/provider-email-sendgrid": "^4.15.5",
+    "@strapi/provider-upload-aws-s3": "^4.15.5",
+    "@strapi/strapi": "4.15.5",
     "axios": "^1.4.0",
     "better-sqlite3": "^7.4.6",
     "pg": "^8.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4",
     "strapi-plugin-populate-deep": "^3.0.0",
-    "strapi-plugin-react-editorjs": "^2.0.1"
+    "strapi-plugin-react-editorjs": "^2.0.1",
+    "styled-components": "^5.3.11"
   },
   "author": {
     "name": "Mischa Haenen (mischahaenen@gmail.com)"
