--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS=
+APP_KEYS=["SUPER_SECRET_KEY","SUPER_SECRET_KEY"]
 AWS_ACCESS_KEY_ID=
 AWS_ACCESS_SECRET=
 AWS_REGION=
