--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.0.0",
     "strapi-plugin-populate-deep": "^3.0.1",
+    "strapi-plugin-sso": "^0.4.5",
     "styled-components": "^5.0.0"
   },
   "engines": {
