--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.7.0",
-    "@strapi/plugin-users-permissions": "4.7.0",
-    "@strapi/provider-email-sendgrid": "^4.15.5",
+    "@strapi/plugin-i18n": "4.25.18",
+    "@strapi/plugin-users-permissions": "4.25.18",
+    "@strapi/provider-email-sendgrid": "^4.25.18",
     "@strapi/provider-upload-aws-s3": "^4.15.5",
-    "@strapi/strapi": "4.7.0",
+    "@strapi/strapi": "^4.25.18",
     "axios": "^1.4.0",
-    "better-sqlite3": "7.4.6",
+    "better-sqlite3": "11.7.2",
     "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^5.3.4",
     "strapi-plugin-populate-deep": "^3.0.0",
     "styled-components": "^5.3.11"
   },
