--- a/package.json
+++ b/package.json
@@ -14,19 +14,18 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.25.18",
-    "@strapi/plugin-users-permissions": "4.25.18",
-    "@strapi/provider-email-sendgrid": "^4.25.18",
-    "@strapi/provider-upload-aws-s3": "^4.15.5",
-    "@strapi/strapi": "^4.25.18",
+    "@strapi/plugin-users-permissions": "5.7.0",
+    "@strapi/provider-email-sendgrid": "^5.7.0",
+    "@strapi/provider-upload-aws-s3": "^5.7.0",
+    "@strapi/strapi": "5.7.0",
     "axios": "^1.4.0",
     "better-sqlite3": "11.7.2",
     "pg": "^8.11.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.0.0",
     "strapi-plugin-populate-deep": "^3.0.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.0.0"
   },
   "strapi": {
     "uuid": "5b7ac261-183d-4230-b2b5-8cba6e882867"
