--- a/package.json
+++ b/package.json
@@ -9,23 +9,37 @@
   },
   "scripts": {
     "build": "strapi build",
+    "console": "strapi console",
+    "deploy": "strapi deploy",
+    "dev": "strapi develop",
     "develop": "strapi develop",
     "start": "strapi start",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "upgrade": "npx @strapi/upgrade latest",
+    "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
-    "@strapi/plugin-users-permissions": "5.7.0",
-    "@strapi/provider-email-sendgrid": "^5.7.0",
-    "@strapi/provider-upload-aws-s3": "^5.7.0",
-    "@strapi/strapi": "5.7.0",
-    "axios": "^1.4.0",
-    "better-sqlite3": "11.7.2",
-    "pg": "^8.11.0",
+    "@strapi/plugin-users-permissions": "5.16.0",
+    "@strapi/provider-email-sendgrid": "5.16.0",
+    "@strapi/provider-upload-aws-s3": "5.16.0",
+    "@strapi/strapi": "5.16.0",
+    "axios": "^1.9.0",
+    "better-sqlite3": "11.10.0",
+    "pg": "^8.16.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
-    "strapi-plugin-populate-deep": "^3.0.0",
-    "styled-components": "^6.0.0"
+    "styled-components": "^6.1.18"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "typescript": "^5"
+  },
+   "engines": {
+    "node": ">=18.0.0 <=22.x.x",
+    "npm": ">=6.0.0"
   },
   "strapi": {
     "uuid": "5b7ac261-183d-4230-b2b5-8cba6e882867"
