--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,6 @@ fabric.properties
 # .pnp.*
 
 # End of https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,strapi
+
+.env.production
+db
