--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "name": "Mischa Haenen (mischahaenen@gmail.com)"
   },
   "scripts": {
+    "prebuild": "npm rebuild",
     "build": "strapi build",
     "console": "strapi console",
     "deploy": "strapi deploy",
@@ -38,8 +39,7 @@
     "typescript": "^5"
   },
    "engines": {
-    "node": ">=18.0.0 <=22.x.x",
-    "npm": ">=6.0.0"
+    "node": "23.x"
   },
   "strapi": {
     "uuid": "5b7ac261-183d-4230-b2b5-8cba6e882867"
